# digit_ros

./: .gitignore  CMakeLists.txt  README.md  digit_ros.repos  package.xml
config/: digit_D20928.yaml  digit_D20951.yaml  digit_D___.yaml  one_digit.rviz
launch/: digit_depth.launch  digit_image.launch  digit_pointcloud.launch
scripts/: digit_depth_pub.py  digit_image_pub.py  digit_pointcloud_pub.py  main.py  rgb_node.py  test_pcl_msg.py
